# EOSsampler

./: CMakeLists.txt  LICENSE  README.md  default.yaml
ceft/: README.txt
config/: default.yaml  defaultMod.yaml
constraints/mrdata/nicer_J0030/: 0030_maryland_2spts_regrid2.h5
constraints/mrdata/nicer_J0437/: 0437_Amsterdam.h5  J0437_regrid.h5  J0437_regrid_new.h5
constraints/mrdata/nicer_J0614/: 0614.h5  J0614_regrid_new.h5  README.md
constraints/mrdata/nicer_J0740_original/: 0740_maryland_nxmm_regrid2.h5
constraints/mrdata/nicer_J0740_update/: 0437_update.h5  J0740_update_regrid.h5  J0740_update_regrid_new.h5  README.md
crust/: BPS2.txt  BPS3.txt  BPSEOS  SFHObeta.txt  SFHo_T0_betaeq.txt
include/: config.hpp  configMod.hpp  constants.hpp  eos.hpp  hdf5_io.hpp  likelihoods.hpp  schema.hpp  tov.hpp
pQCD/: CMakeLists.txt  definitions.h  pQCD.cpp  pQCD_N3LO.py  pQCD_check.nb  pQCD_plot_cs2.py
scripts/: VQCD_data.h5  check.nb  plots.ipynb
scripts/modules/: functions.py  plot_settings.py  utils.py
src/: config.cpp  configMod.cpp  eos_sampler.cpp  eos_samplerMod.cpp  hdf5_io.cpp  likelihoods.cpp  main_eos.cpp  main_tov.cpp  tov_solver.cpp
